--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-body {
+@font-face {
     font-family: Roboto;
+    src: url(Roboto-Regular.ttf);
+}
+
+body {
+    font-family:Roboto ;
     height: 100vh;
     margin: 0;
 }
@@ -17,18 +22,67 @@ a  {
     text-decoration: none;
     color: #e5e7eb;
 }
+button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: none;
+    border-radius: 8px;
+    text-decoration: none;
+    padding: 8px 16px;
+    flex: 0 1 0;
+}
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: #1f2937;
     font-size: 18px;
     color: #e5e7eb;
+    padding: 10px;
 }
 
 .logo {
     font-size: 24px;
+    font-weight: 900;
     color: #f9faf8;
     padding: 10px;
+}
+
+.hero {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 25px;
+    padding: 100px;
+}
+
+.hero-txt{
+    max-width: 400px;
+}
+
+.main-txt {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+    margin-bottom: 5px;
+}
+
+.sec-txt {
+    font-size: 18px;
+    color: #e5e7eb;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+.img-hold {
+    color: #f9faf8;
+    font-size: 18px;
+    background-color: #6d747d;
+    flex: 1;
+    max-width: 500px;
+    align-self: stretch;
+    align-content: center;
+    
 }
