--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,10 @@ button {
     color: #f9faf8;
     border: none;
     border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
     text-decoration: none;
-    padding: 8px 16px;
+    padding: 8px 33px;
     flex: 0 1 0;
 }
 
@@ -59,7 +61,7 @@ button {
 }
 
 .hero-txt{
-    max-width: 400px;
+    max-width: 450px;
 }
 
 .main-txt {
