--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ ul {
     padding: 0;
     display: flex;
     padding: 10px;
+    padding-right: 90px;
     gap: 15px;
 }
 
@@ -36,12 +37,13 @@ button {
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #1f2937;
     font-size: 18px;
     color: #e5e7eb;
     padding: 10px;
+    padding-left: 90px;
 }
 
 .logo {
@@ -54,7 +56,7 @@ button {
 .hero {
     background-color: #1f2937;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     gap: 25px;
     padding: 100px;
@@ -87,4 +89,17 @@ button {
     align-self: stretch;
     align-content: center;
     
+}
+
+.content {
+    display: flex;
+}
+
+.memo-head {
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    font-weight: 900;
+    font-size: 36px;
+    color: #1f2937;
 }
