--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,25 @@ button {
 
 .quote {
     background-color: #e5e7eb;
+    padding: 110px;
 }
 
 .quote-txt{
     font-size: 36px;
     color: #1f2937;
     font-family: Roboto-Italic;
+    align-self: center;
+    /*border-color: red;
+    border-width: 2px;
+    border-style: dotted;*/
+}
+
+.quote-author {
+    font-size: 24px;
+    font-weight: 900;
+    justify-self: flex-end;
+    padding: 40px;
+    /*border-color: blue;
+    border-width: 2px;
+    border-style: dotted;*/
 }
