Center img hold message on hero section
Centered the message inside the holding container.

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ button {
     flex: 1;
     max-width: 500px;
     align-self: stretch;
+    justify-items: center;
     align-content: center;
     
 }
