--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,11 @@ button {
     border-width: 2px;
     border-style: dotted;*/
 }
+
+.action-con {
+    margin: 100px;
+}
+
+.action {
+    background-color: #3882f6;
+}
