--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,15 @@ button {
     background-color: #3882f6;
     border-radius: 8px;
 }
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
+    justify-content: center;
+    padding: 50px;
+}
+
+.foot-txt {
+    justify-self: center;
+}
