Adjust bottom padding on content section
Adjusted the bottom padding to make more even with
top padding.

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ button {
     align-content: center;
     justify-content: center;
     gap: 50px;
-    padding: 40px;
+    padding: 40px 40px 10px 40px;
 }
 
 .info {
