Add family image to hero section
Added a picture at the img holder on the hero
section, also made the background color a comment
so it can't be seen, and it was interfering with
the img.

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ button {
 .img-hold {
     color: #f9faf8;
     font-size: 18px;
-    background-color: #6d747d;
+    /*background-color: #6d747d;*/
     flex: 1;
     max-width: 500px;
     align-self: stretch;
